--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
     - Day 3: day3.md
     - Day 4: day4.md
     - Bonus code: bonus_code.md
+    - Exam: exam.md
     - Useful links: links.md
 
 theme:
